2009-12-11  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.1.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* Makefile.am (lib_libvolume_key_la_LDFLAGS): Update version info.

	* lib/SECerrs.h
	* lib/nss_error.h
	* lib/nss_error.c: New file.
	* lib/crypto.c (error_from_pr)
	* src/volume_key.c (error_from_pr): Use libvk_nss_error_text__ ().
	* Makefile.am (lib_libvolume_key_la_SOURCES): Add lib/SECerrs.h,
	lib/nss_error.c and lib/nss_error.h.

2009-09-30  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.3.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* Makefile.am (lib_libvolume_key_la_LDFLAGS): Update version info.

	* python/volume_key.i (%init): Call libvk_init ().
	(libvk_init): New %ignore directive.

	* configure.ac: Use pkg-config to search for for libcryptsetup.
	* Makefile.am (AM_CPPFLAGS): Add $(libcryptsetup_CFLAGS).
	(lib_libvolume_key_la_LIBADD): Replace -lcryptsetup with
	$(libcryptsetup_LIBS).
	* lib/volume_luks.c (dummy_luks_log): Remove.
	(open_crypt_device): New function.
	(g_free_key): Replace free_key ().
	(luks_volume_open, luks_get_secret, luks_load_packet)
	(luks_apply_secret, luks_add_secret, luks_open_with_packet): Update for
	final libcryptsetup API.
	* README: Update.

	* Makefile.am (python__volume_key_la_LIBADD)
	(tests_packet_roundtrips_LDADD): Add $(glib_LIBS), $(nss_LIBS).

	* src/volume_key.c (output_format, output_format_string): New variables.
	(option_descriptions): Add --output-format.
	(parse_options): Handle --output-format.
	(write_packet): Use output_format.
	* doc/volume_key.8 (--output-format): Document new option.

	* lib/libvolume_key.h (LIBVK_PACKET_FORMAT_ASYMMETRIC_WRAP_SECRET_ONLY)
	(LIBVK_PACKET_FORMAT_SYMMETRIC_WRAP_SECRET_ONLY)
	(libvk_volume_create_packet_wrap_secret_symmetric)
	* lib/libvolume_key.c (libvk_volume_create_packet_asymmetric)
	(libvk_volume_create_packet_asymmetric_with_format)
	(libvk_volume_create_packet_wrap_secret_symmetric)
	(libvk_packet_open)